--- a/main.css
+++ b/main.css
@@ -583,11 +583,10 @@ ul{
 	padding: 10px;
 	background-color: #000;
 }
-
-.liveShare-hdr{
-
+.liveshare{
+	margin: 25px;
 }
-
+	
 .liveShare-rooms{
 	display: flex;
 	justify-content: center;
