--- a/premium.css
+++ b/premium.css
@@ -5,6 +5,11 @@ body {
 	background-attachment: fixed;
 	font-family: 'Lato', Arial, Helvetica, sans-serif;
 	color: white;
+	overflow-x: hidden;
+}
+
+#top-row{
+	background-color: black;
 }
 
 .premium-header{
@@ -13,49 +18,221 @@ body {
 	background: rgba(0, 0, 0, 0.664);
 }
 
-.pag-divider{
-	background: rgb(2,0,36);
-	background: linear-gradient(90deg, rgb(10, 58, 121) 16%, rgba(6,5,85,1) 29%, rgba(8,7,106,1) 40%, rgba(9,9,121,1) 47%, rgba(34,7,148,1) 55%, rgba(51,6,166,1) 67%, rgba(39,40,173,1) 79%, rgba(36,50,175,1) 83%, rgba(33,58,177,1) 86%, rgba(21,94,185,1) 100%);
-	width: 100%;
-	height: .25rem;
 
+.pag-divider{ 
+	width: 100%;
+	height: .25em;  
+	background: linear-gradient(270deg, #040353, #371b98, #2d21a0, #244b95, #2862bc, #615fdd);
+    background-size: 1400% 1400%;
+    animation: AnimationName 7s ease infinite;
 }
+
+@keyframes AnimationName {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+
 
 #top-row{
 	background-color: black;
+	margin: 0;
+	padding: 0;
 }
 
-.vx-media{
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-}
-
-#vx-destaque{
-	display: flex;
-	justify-content: center;
-	position: absolute;
-}
-
-.vx__overlay{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.6);
-	color: white;
-	display: flex;
-	justify-content: center;
-	opacity: 0;
-}
-
-.vx__overlay:hover{
-	opacity: 2;
-
+.bx-header{
+	text-align: justify;
+	padding: 10px;
 }
 
 video{
-	rotate: -90deg;
+	margin: 0;
+	padding: 0;
+	background-color: black;
+
+}
+
+#vx-destaque{
+	left: 0;
+}
+
+.sky{
+    width: 550px;
+	height: 30vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    pointer-events: none;
+}
+
+.sky .estrelinhas{
+    position: relative;
+    width: 100%;
+	height: 30vh;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.sky .estrelinhas div {
+    position: absolute;
+    display: float;
+}
+.sky .estrelinhas div:nth-child(9) {
+    left: 10%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas div:nth-child(8) {
+    left: 20%;
+    animation: animate 10s linear infinite;
+}
+.sky .estrelinhas div:nth-child(7) {
+    left: 70%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas div:nth-child(6) {
+    left: 60%;
+    animation: animate 15s linear infinite;
+}
+.sky .estrelinhas div:nth-child(5) {
+    left: 45%;
+    animation: animate 10s linear infinite;
+}
+.sky .estrelinhas div:nth-child(4) {
+    left: 70%;
+    animation: animate 20s linear infinite;
+}
+.sky .estrelinhas div:nth-child(3) {
+    left: 15%;
+    animation: animate 14s linear infinite;
+}
+.sky .estrelinhas div:nth-child(2) {
+    left: 5%;
+    animation: animate 7s linear infinite;
+}
+
+.sky .estrelinhas div:nth-child(1) {
+    left: 10%;
+    animation: animate 10s linear infinite;
+}
+
+.sky .estrelinhas1{
+    position: relative;
+    width: 100%;
+	height: 30vh;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.sky .estrelinhas1 div {
+    position: absolute;
+    display: float;
+}
+.sky .estrelinhas1 div:nth-child(1) {
+    left: 1%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(2) {
+    left: 20%;
+    animation: animate 9s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(3) {
+    left: 70%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(4) {
+    left: 5%;
+    animation: animate 7s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(5) {
+    left: 65%;
+    animation: animate 4s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(6) {
+    left: 30%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(7) {
+    left: 15%;
+    animation: animate 14s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(8) {
+    left: 20%;
+    animation: animate 15s linear infinite;
+}
+
+.sky .estrelinhas1 div:nth-child(9) {
+    left: 15%;
+    animation: animate 20s linear infinite;
+}
+@keyframes animate {
+    0% 
+    {
+        opacity: 0;
+        top: -10%;
+        transform: translateX(0px) rotate(0deg);
+    }
+    10% 
+    {
+        opacity: 1;
+    }
+    20%
+    {
+        transform: translateX(0px) rotate(0deg);
+    }
+    40%
+    {
+        transform: translateX(0px) rotate(0deg);
+    }
+    60%
+    {
+        transform: translateX(0px) rotate(0deg);
+    }
+    80%
+    {
+		
+        transform: translateX(0px) rotate(0deg);
+    }
+    100%
+    {
+		opacity: -1;
+        top: 250%;
+        transform: translateX(0px) rotate(0deg);
+    }
+}
+
+#liveshare{
+	margin: 25px;
+}
+
+.liveShare-component{
+	width: 100%;
+	position: relative;
+	padding: 10px;
+	margin: 25px;
+	background-color: #000000;
+}
+	
+.liveShare-rooms{
+	display: flex;
+	justify-content: center;
+	
+}
+
+.card{
+	margin-top: 25px;
+	margin-right: 25px;
+	background: linear-gradient(270deg, #27272e56, #361b9863, #2e21a052, #244c9560, #2863bc63, #615fdd52);
+    background-size: 1400% 1400%;
+    animation: AnimationName 7s ease infinite;
+}
+
+.btn-scp{
+	background: rgb(125,133,213);
+	background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
+	color: black;
+	font-weight: bold;
+	font-size: 15px;
 }
