--- a/premium.css
+++ b/premium.css
@@ -1,224 +1,249 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
-  <title>Premium</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" href="./img/favicon-32x32.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
-  <link rel="stylesheet" type="text/css" href="premium.css">
-  
-  <style>
-    ::-webkit-scrollbar {
-    width: 5px;
+body {
+	background: url(./img/capa.png),
+				url(./img/ruido.png),
+				linear-gradient(50deg,#4b7ff0,#2926f8);
+	background-attachment: fixed;
+	font-family: 'Lato', Arial, Helvetica, sans-serif;
+	color: white;
+	overflow-x: hidden;
+}
+
+#top-row{
+	background-color: black;
+}
+
+.premium-header{
+    display: flex;
+    justify-content: center;
+	background: rgba(0, 0, 0, 0.664);
+}
+
+
+.pag-divider{ 
+	width: 100%;
+	height: .25em;  
+	background: linear-gradient(270deg, #040353, #371b98, #2d21a0, #244b95, #2862bc, #615fdd);
+    background-size: 1400% 1400%;
+    animation: AnimationName 7s ease infinite;
+}
+
+@keyframes AnimationName {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+
+
+#top-row{
+	background-color: black;
+	margin: 0;
+	padding: 0;
+}
+
+.bx-header{
+	text-align: justify;
+	padding: 10px;
+}
+
+video{
+	margin: 0;
+	padding: 0;
+	background-color: black;
+
+}
+
+#vx-destaque{
+	left: 0;
+}
+
+.sky{
+    width: 550px;
+	height: 30vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    pointer-events: none;
+}
+
+.sky .estrelinhas{
+    position: relative;
+    width: 100%;
+	height: 30vh;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.sky .estrelinhas div {
+    position: absolute;
+    display: float;
+}
+.sky .estrelinhas div:nth-child(9) {
+    left: 10%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas div:nth-child(8) {
+    left: 20%;
+    animation: animate 10s linear infinite;
+}
+.sky .estrelinhas div:nth-child(7) {
+    left: 70%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas div:nth-child(6) {
+    left: 60%;
+    animation: animate 15s linear infinite;
+}
+.sky .estrelinhas div:nth-child(5) {
+    left: 45%;
+    animation: animate 10s linear infinite;
+}
+.sky .estrelinhas div:nth-child(4) {
+    left: 70%;
+    animation: animate 20s linear infinite;
+}
+.sky .estrelinhas div:nth-child(3) {
+    left: 15%;
+    animation: animate 14s linear infinite;
+}
+.sky .estrelinhas div:nth-child(2) {
+    left: 5%;
+    animation: animate 7s linear infinite;
+}
+
+.sky .estrelinhas div:nth-child(1) {
+    left: 10%;
+    animation: animate 10s linear infinite;
+}
+
+.sky .estrelinhas1{
+    position: relative;
+    width: 100%;
+	height: 30vh;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.sky .estrelinhas1 div {
+    position: absolute;
+    display: float;
+}
+.sky .estrelinhas1 div:nth-child(1) {
+    left: 1%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(2) {
+    left: 20%;
+    animation: animate 9s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(3) {
+    left: 70%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(4) {
+    left: 5%;
+    animation: animate 7s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(5) {
+    left: 65%;
+    animation: animate 4s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(6) {
+    left: 30%;
+    animation: animate 5s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(7) {
+    left: 15%;
+    animation: animate 14s linear infinite;
+}
+.sky .estrelinhas1 div:nth-child(8) {
+    left: 20%;
+    animation: animate 15s linear infinite;
+}
+
+.sky .estrelinhas1 div:nth-child(9) {
+    left: 15%;
+    animation: animate 20s linear infinite;
+}
+@keyframes animate {
+    0% 
+    {
+        opacity: 0;
+        top: -10%;
+        transform: translateX(0px) rotate(0deg);
     }
-    ::-webkit-scrollbar-track {
-    background: transparent;
+    10% 
+    {
+        opacity: 1;
     }
-    ::-webkit-scrollbar-thumb {
-    background: #a8b2d4;
+    20%
+    {
+        transform: translateX(0px) rotate(0deg);
     }
-    ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    40%
+    {
+        transform: translateX(0px) rotate(0deg);
     }
-  </style>
+    60%
+    {
+        transform: translateX(0px) rotate(0deg);
+    }
+    80%
+    {
+		
+        transform: translateX(0px) rotate(0deg);
+    }
+    100%
+    {
+		opacity: -1;
+        top: 250%;
+        transform: translateX(0px) rotate(0deg);
+    }
+}
 
-</head>
 
-<body>
+.liveShare-hdr{
+    padding: 25px;
+}
 
-  <header>
-    <div class="premium-header">
-        <div class="st-mid">
-            <a href="index.html" class="displayed">
-            <img src="./img/bg-st-removebg-preview.png" width="142">
-            </a>
-        <div> 
-    </div>   
-  </header>
+.liveShare-component{
+	width: 100%;
+	background-color: #000000;
+}
+	
+.liveShare-rooms{
+	display: flex;
+    flex-direction: row;
+	justify-content: center;
+	
+}
 
-  <div class="pag-divider"></div>
+.cd-free{
+    display: flex;
+    font-size: 12px;
 
-  <div class="row" id="top-row">
-    <div class="col-md-8">
-      <div class="premium-desc">
-        <div class="bx-header">
-          <h6>Os </h6>
-          <p>São mais de 200 títulos dispoíveis, resgate seu período de teste de 10 dias gratuito e começe a 
-          aproveitar nossos conteúdos!
-          O objetivo da Animefy Streaming é oferecer aos usuários acesso aos conteúdos mais recentes aos nossos usuários. 
-          Por isso, os lançamentos são enviados em apenas 1hr após serem lançados originalmente no Japão!!
-          Os benefícios de adquiquirir um passe de membro exclusivo variam de acordo com o plano escolhido e vão desde 
-          disponibilidade para download para acesso offline, acesso à eventos exclusivos da plataforma e descontos incríveis na loja
-          animefy!
-          </p>        
-        </div>
-      </div>
-    </div>
+}
 
-    <div class="col-md-4">
-      <div class="sky">
-        <div class="estrelinhas">
-          <div><img src="./img/bg-st-removebg-preview-os.png" width="30%"></div>
-          <div><img src="./img/bg-st-roxo.png" width="15%"></div>
-          <div><img src="./img/bg-st-removebg-preview.png" width="25%"></div>
-          <div><img src="./img/bg-st-roxu.png" width="30%"></div>
-          <div><img src="./img/bg-st-removebg-preview.png" width="20%"></div>
-          <div><img src="./img/bg-st-roxo.png" width="20%"></div>
-          <div><img src="./img/bg-st-removebg-preview-os.png" width="30%"></div>
-          <div><img src="./img/bg-st-removebg-preview-os.png" width="25%"></div>
-          <div><img src="./img/bg-st-roxo.png" width="20%"></div>
-        </div>
+.descrito{
+    margin-bottom: 15px;
+    font-weight: bold;
+}
 
-        <div class="estrelinhas1">
-          <div><img src="./img/bg-st-removebg-preview.png" width="15%"></div>
-          <div><img src="./img/bg-st-removebg-preview-os.png" width="25%"></div>
-          <div><img src="./img/bg-st-removebg-preview.png" width="20%"></div>
-          <div><img src="./img/bg-st-removebg-preview-os.png" width="20%"></div>
-          <div><img src="./img/bg-st-roxo.png" width="20%"></div>
-          <div><img src="./img/bg-st-removebg-preview-os.png" width="25%"></div>
-          <div><img src="./img/bg-st-roxo.png" width="25%"></div>
-          <div><img src="./img/bg-st-removebg-preview.png" width="25%"></div>
-        </div>
-      </div>
-    </div>
-  </div>  
-  
-  <div class="pag-divider"></div>
+.card{
+    margin: 25px;
+	width: 750px;
+    height: 400px;
+	background: linear-gradient(270deg, #27272e56, #361b9863, #2e21a052, #244c9560, #2863bc63, #615fdd52);
+    background-size: 1400% 1400%;
+    animation: AnimationName 7s ease infinite;
+}
 
-  <!--live share component-->
-  <div class="row">
-    <div class="col-12">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <div class="liveShare-component text-white">
-                    <div class="liveShare-hdr">
-                        <h2><i class="fa-solid fa-crown"></i> Membership</h2>
-                        <div class="feed-divider"></div>
-                        <h5>Escolha o plano que mais combina com você! Assita aos seus programas favoritos e participe dos eventos ao vivo da comunidade!</h5>
-                        <p>Se liga e de não fique de fora!</p>
-                    </div>
-
-                    <div class="row">
-                      <div class="col-md-1"></div>
-                        <div class="col-md-10" >
-                          <div class="liveShare-rooms">
-                            <div class="card text-white">
-                              <div class="card-body">
-                                <h5 class="card-title">Plano One and Only</h5>
-                                  <div class="cd-info">
-                                    <p>Mensalidade de <a href="">9,90</a></p>
-                                    <p class="descrito">Pra você usar sem precisar dividir!</p>
-                                  </div>
-
-                                  <div class="cd-free">  
-                                    <P><img src="./img/favicon-16x16.png">Sem anúncios</P>                                            
-                                  </div>
-
-                                  <div class="cd-free">  
-                                    <P><img src="./img/favicon-16x16.png">Acesso ilimitado a biblioteca ANIMEFY</P>                                            
-                                  </div>
-
-                                  <div class="cd-free">  
-                                    <P><img src="./img/favicon-16x16.png">Limite de 1 tela por transmissão</P>                                            
-                                  </div>
-
-                                  <div class="cd-free">  
-                                    <P><img src="./img/favicon-16x16.png">Assita Offline</P>                                            
-                                  </div>
-
-                                  <a href="./login.html" class="btn btn-scp">Assinar</a>
-                                </div>
-                              </div>
-
-                              <div class="card text-white">
-                                <div class="card-body">
-                                  <h5 class="card-title">Plano Two is Better Than One</h5>
-                                    <div class="cd-info">
-                                      <p>Mensalidade de <a href="">14,90</a></p>
-                                      <p class="descrito">Escolha alguém para dividir a conta!</p>
-                                    </div>
-                                    
-                                    <div class="cd-free">  
-                                      <P><img src="./img/favicon-16x16.png">Sem anúncios</P>                                            
-                                    </div>
-  
-                                    <div class="cd-free">  
-                                      <P><img src="./img/favicon-16x16.png">Acesso ilimitado a biblioteca ANIMEFY</P>                                            
-                                    </div>
-  
-                                    <div class="cd-free">  
-                                      <P><img src="./img/favicon-16x16.png">Transmissão simultanea para duas telas</P>                                            
-                                    </div>
-
-                                    <div class="cd-free">  
-                                      <P><img src="./img/favicon-16x16.png">Assita Offline</P>                                            
-                                    </div>
-  
-                                        <a href="./login.html" class="btn btn-scp">Assinar</a>
-                                    </div>
-                                </div>
-
-                                <div class="card text-white">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Plano HIGH5</h5>
-
-                                        <div class="cd-info">
-                                          <p>Mensalidade de <a href="">14,90</a></p>
-                                          <p class="descrito">Pra usar com aquele grupo especial!</p>
-                                        </div>
-
-                                        <div class="cd-free">  
-                                          <P><img src="./img/favicon-16x16.png">Sem anúncios</P>                                            
-                                        </div>
-      
-                                        <div class="cd-free">  
-                                          <P><img src="./img/favicon-16x16.png">Acesso ilimitado a biblioteca ANIMEFY</P>                                            
-                                        </div>
-      
-                                        <div class="cd-free">  
-                                          <P><img src="./img/favicon-16x16.png">Transmissão simultanea para cinco telas</P>                                            
-                                        </div>
-    
-                                        <div class="cd-free">  
-                                          <P><img src="./img/favicon-16x16.png">Assita Offline</P>                                            
-                                        </div>
-
-                                        <div class="cd-free">  
-                                          <P><img src="./img/favicon-16x16.png">Descontos na loja Animefy</P>                                            
-                                        </div>
-
-                                        <a href="./login.html" class="btn btn-scp">Assinar</a>
-                                    </div>
-                                </div>
-                              </div>
-                            </div>
-                        <div class="col-md-1"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-    </div>
-</div>
-  
-<!--<div class="row" id="vx-destaque">
-    <div class="col-md-12">
-        <video width="100%" height="100%" autoplay loop muted>
-          <source src="./img/solo-leveling-resized.mp4" type="video/mp4">
-        </video>
-    </div>    
-</div><!-->
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
-  
+.btn-scp{
+	background: rgb(125,133,213);
+	background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
+	color: black;
+	font-weight: bold;
+	
+}
